# playpen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  add_days.py  release.toml
.cargo/: config.toml
.github/workflows/: coverage.yml  release.yml
plans/: PROFILES_PLAN.md
src/: main.rs
tests/: test_disk_io.rs  test_home_access.rs  test_network.rs  test_npm_project.rs  test_profiles.rs
tests/common/: mod.rs
