[package]
name = "playpen"
version = "0.3.3"
edition = "2021"
description = "Program launcher with memory, CPU, and path limits, built on systemd-run"
license = "GPL-3.0-or-later"
repository = "https://github.com/cjrh/playpen"
readme = "README.md"
# `playpen` is taken on crates.io by another crate; we distribute via GitHub
# Releases only. Marking the package itself non-publishable makes cargo-release
# skip all crates.io interaction (publish + registry lookups).
publish = false

# Lets `cargo binstall --git https://github.com/cjrh/playpen playpen` locate
# the archives published by the release workflow. Tags are the bare version
# (e.g. 0.3.1); each archive is `playpen-<target>.tar.gz` with the binary at
# its root.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anyhow = "1.0.94"
atty = "0.2.14"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["process"] }
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
